<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="adapterSeasons"
            type="com.aya.football_league_application.presentation.ui.adapter.AdapterSeasons" />


        <variable
        name="model"
        type="com.aya.football_league_application.data.response.DataCompetitions" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    >


  <ImageView
      android:id="@+id/img_team"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_200sdp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img_team"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{model.name}"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/img_team"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{model.plan}"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/img_team"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_season"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/background_item_adapter"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/seasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/seasons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@{model.currentSeason.startDate}"
            app:layout_constraintTop_toBottomOf="@id/seasons"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@{model.currentSeason.endDate}"
            app:layout_constraintTop_toBottomOf="@id/seasons"
            app:layout_constraintStart_toEndOf="@id/start"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/title_teams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/current_season"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lyAdapterSeason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:adapter="@{adapterSeasons}"
        tools:listitem="@layout/item_season"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        app:layout_constraintTop_toBottomOf="@id/title_teams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyNoHaveData"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_data.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/sorry_the_server_doesn_t_have_data"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
            app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>